# rattler-build-1295-mre

./: .gitignore  CMakeLists.txt  README.md  conda_build_config.yaml  nonrelocatableConfig.cmake.in  pixi.toml  recipe.yaml
conda_build_recipe/: bld_cmake.bat  build_cmake.sh  conda_build_config_conda_build.yaml  meta.yaml
rattler_build_recipe/: recipe.yaml
src/: CMakeLists.txt  nonrelocatableConfig.cmake.in  nonrelocatableRegularFile.txt.in
